# RunIT_Mac

./: .gitignore  Cargo.toml  README.md  pi-session-2026-04-04T15-36-12-130Z_4a1f566f-8d70-4e50-84e5-40f0fc993310.html
.pi/: settings.json
.pi/extensions/: runit-tools.ts
.pi/prompts/: debug-issue.md  metal-kernel.md  new-feature.md  optimize.md  review-changes.md
.pi/skills/bench-perf/: SKILL.md
.pi/skills/build-engine/: SKILL.md
.pi/skills/debug-metal/: SKILL.md
.pi/skills/inspect-model/: SKILL.md
.pi/skills/publish-crates/: SKILL.md
.pi/skills/run-inference/: SKILL.md
.pi/skills/test-kernels/: SKILL.md
.pi/skills/test-server/: SKILL.md
.pi/skills/validate-output/: SKILL.md
crates/bench/: Cargo.toml
crates/bench/benches/: gguf_parse.rs
crates/bench/src/: lib.rs
crates/engine/: Cargo.toml  README.md
crates/engine/src/: chat_template.rs  config.rs  forward.rs  kv_cache.rs  lib.rs  loader.rs  metal_tensor.rs  paged_kv_cache.rs  prefill.rs  sampler.rs  tensor.rs  tq_kv_cache.rs  weights.rs
crates/engine/src/server/: handlers.rs  mod.rs  types.rs
crates/engine/tests/: qwen2_load_test.rs
crates/gguf/: Cargo.toml  README.md
crates/gguf/src/: error.rs  lib.rs  parser.rs  types.rs
crates/kernels/: Cargo.toml  README.md  build.rs
crates/kernels/shaders/: activation.metal  attention.metal  dequant.metal  fused_ffn.metal  fused_qkv.metal  fused_rope.metal  gemm.metal  gemv.metal  gemv_multirow.metal  gemv_q4_0.metal  gemv_q4k.metal  gemv_q8_0.metal  gemv_q8_0_wide.metal  norm.metal  rope.metal  turboquant.metal
crates/kernels/src/: context.rs  dispatch.rs  error.rs  lib.rs  turboquant.rs
crates/reference/: Cargo.toml  README.md
crates/reference/src/: lib.rs
crates/tokenizer/: Cargo.toml  README.md
crates/tokenizer/src/: lib.rs
docs/: ARCHITECTURE.md  COMPARISON.md  KERNELS.md  STATUS_REPORT.md  implementation-plan.md
scripts/: compare_logits.py  reference_logits.py  verify_rope.py
