[package]
name = "bare-metal-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Performance benchmarks for bare-metal LLM inference engine"
publish = false

[[bench]]
name = "gguf_parse"
harness = false

[dependencies]
bare-metal-gguf = { workspace = true }
bare-metal-engine = { workspace = true }
bare-metal-reference = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
