[package]
name = "bare-metal-gguf"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "GGUF binary format parser for bare-metal LLM inference — zero-copy mmap, all quantization types"
keywords = ["gguf", "llm", "inference", "parser", "quantization"]
categories = ["parser-implementations", "science"]

[dependencies]
thiserror = { workspace = true }
half = { workspace = true }
bytemuck = { workspace = true }

[dev-dependencies]
