[package]
name = "bare-metal-kernels"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Metal GPU kernel dispatch layer for bare-metal LLM inference"
build = "build.rs"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
half = { workspace = true }
bare-metal-reference = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
metal = { workspace = true }
objc = { workspace = true }
