[package]
name = "bare-metal-kernels"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Metal GPU kernels for LLM inference on Apple Silicon — 85+ optimized compute shaders"
keywords = ["metal", "gpu", "llm", "apple-silicon", "inference"]
categories = ["science", "hardware-support"]
build = "build.rs"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
half = { workspace = true }
bare-metal-reference = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
metal = { workspace = true }
objc = { workspace = true }
