[package]
name = "bare-metal-reference"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Numerical validation harness for bare-metal LLM inference kernels"
keywords = ["llm", "inference", "validation", "testing"]
categories = ["development-tools::testing"]

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
