[package]
name = "bare-metal-tokenizer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "HuggingFace BPE tokenizer wrapper for bare-metal LLM inference"
readme = "README.md"
keywords = ["tokenizer", "llm", "bpe", "inference"]
categories = ["text-processing"]

[dependencies]
tokenizers = { workspace = true }
thiserror = { workspace = true }
